<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactFragment"
    android:background="@drawable/add_contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/contact_add_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contact_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/contact_add_mail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/add_mail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/red"
            android:textColor="@color/aqua"
            android:text="@string/contact_add_bt" />
    </LinearLayout>

</FrameLayout>