<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <TextView
            android:id="@+id/planname_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plan_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/planname_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/Plandate_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/plan_date"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plan_tv1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plan_tv2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plan_tv3"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/planyear_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:textAlignment="viewEnd"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/planmonth_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="30dp"
                    android:textAlignment="viewEnd"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/planday_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="viewEnd"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/checkbox" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/plancancel_bt"
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:typeface="sans" />

            <Space
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/planconf_bt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/decide"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:typeface="serif" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</FrameLayout>
